# v_vmifier

./: .gitignore  Cargo.toml  Dockerfile  README-github.md  README.md  Trunk.toml  docker-compose.yml  index.html  index.scss
.forgejo/workflows/: README.md  docker-forgejo.yml  mirror-to-github.yml
.github/workflows/: docker-image.yml
src/: app.rs  main.rs
src/data/: mod.rs  replacements.rs  wordlist.rs
