[package]
name = "v_vmifier"
version = "0.1.0"
edition = "2021"
description = "A string randomizer inspired by V/Vm HelpAphexTwin4.0"
readme = "README.md"
repository = "https://github.com/thadah/v_vmifier"
license = "EUPL-1.2"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]
authors = ["Thadah D. Denyse <thadahdenyse@protonmail.com>", "Aitor Astorga <a.astorga.sdv@protonmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
rand = "0.8"
lazy_static = "1.5"
gloo = { version = "0.11", features = ["storage", "net"] }
gloo-console = "0.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }